@@ -85,28 +85,31 @@ public class FeedService {
 
         List<FeedPicsEntity> picList = feedRepository.selFeedPicsAll(list);
         List<FeedFavEntity> favList = dto.getIsFavList() == 1 ? null : feedRepository.selFeedMyFavAll(list, dto.getLoginedIuser());
+        List<FeedSelCommentVo> commentList = commentMapper.selFeedCommentTop4(list);
+        return list.stream().map(item -> {
+                    List<FeedSelCommentVo> eachCommentList = commentList.stream().filter(comment -> comment.getIfeed() == item.getIfeed()).toList();
 
-        return list.stream().map(item ->
-                        FeedSelVo.builder()
-                                .ifeed(item.getIfeed().intValue())
-                                .location(item.getLocation())
-                                .contents(item.getContents())
-                                .createdAt(item.getCreatedAt().toString())
-                                .writerIuser(item.getUserEntity().getIuser().intValue())
-                                .writerNm(item.getUserEntity().getNm())
-                                .writerPic(item.getUserEntity().getPic())
-                                .pics(picList.stream().filter(pic ->
-                                                pic.getFeedEntity().getIfeed().equals(item.getIfeed()))
-                                        .map(FeedPicsEntity::getPic)
-                                        .collect(Collectors.toList())
-                                )
-                                .isFav(dto.getIsFavList() == 1 ?
-                                        1
-                                        : favList.stream().anyMatch(fav -> fav.getFeedEntity().getIfeed() == item.getIfeed()) ?
-                                            1
-                                            : 0)
-                                .build())
-                .toList();
+                    return FeedSelVo.builder()
+                            .ifeed(item.getIfeed().intValue())
+                            .location(item.getLocation())
+                            .contents(item.getContents())
+                            .createdAt(item.getCreatedAt().toString())
+                            .writerIuser(item.getUserEntity().getIuser().intValue())
+                            .writerNm(item.getUserEntity().getNm())
+                            .writerPic(item.getUserEntity().getPic())
+                            .pics(picList.stream().filter(pic ->
+                                            pic.getFeedEntity().getIfeed().equals(item.getIfeed()))
+                                    .map(FeedPicsEntity::getPic)
+                                    .collect(Collectors.toList())
+                            )
+                            .isFav(dto.getIsFavList() == 1 ?
+                                    1
+                                    : favList.stream().anyMatch(fav -> fav.getFeedEntity().getIfeed() == item.getIfeed()) ?
+                                    1
+                                    : 0)
+                            .build();
+                }
+        ).toList();
     }
 
     @Transactional
